deploy: 83675db283fa8416233375bc2c64f9915ffd9062

--- a/tutorials/g_td_sim.ipynb
+++ b/tutorials/g_td_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8e63d1f",
+   "id": "b49ac552",
    "metadata": {},
    "source": [
     "# Time-Domain simulations\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3018f36f",
+   "id": "41e5feef",
    "metadata": {},
    "source": [
     "We introduce time-domain simulations, which are based on GRANAD's default master equation"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa9b8ca",
+   "id": "2cdb0451",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(t) = -i [H[t,\\rho(t)], \\rho] + \\mathcal{D}[t, \\rho]$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c8112d3",
+   "id": "100acfd3",
    "metadata": {},
    "source": [
     "The non-linear Hamiltonian is given by"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d095bd5b",
+   "id": "3748f9e0",
    "metadata": {},
    "source": [
     "$$H[t,\\rho(t)] = h^{0} + \\vec{E} \\vec{P} + C(\\rho(t) - \\rho^{0})$$"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93dd3bc0",
+   "id": "9cebafca",
    "metadata": {},
    "source": [
     "where "
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b492dc7",
+   "id": "625e2860",
    "metadata": {},
    "source": [
     "1. $h^{0}$ is the unperturbed or bare Hamiltonian constructed from localized orbitals.\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c903be5",
+   "id": "442a2215",
    "metadata": {},
    "source": [
     "This expression is the dipole-gauge expression for the Hamiltonian including an external electric field $\\vec{E}$."
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2904dc37",
+   "id": "c975af4e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db9ec549",
+   "id": "0178f4f2",
    "metadata": {},
    "source": [
     "You can compute multiple observables in one simulation run"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "16f32032",
+   "id": "ec3d3460",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:14.018316Z",
-     "iopub.status.busy": "2025-01-22T10:55:14.018145Z",
-     "iopub.status.idle": "2025-01-22T10:55:23.875946Z",
-     "shell.execute_reply": "2025-01-22T10:55:23.875407Z"
+     "iopub.execute_input": "2025-01-22T11:07:49.162441Z",
+     "iopub.status.busy": "2025-01-22T11:07:49.161984Z",
+     "iopub.status.idle": "2025-01-22T11:07:59.325387Z",
+     "shell.execute_reply": "2025-01-22T11:07:59.324762Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72cf47b9",
+   "id": "71f5c04f",
    "metadata": {},
    "source": [
     "The result object stores this info. Operators are concatenated in the order you passed them in."
@@ -149,13 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "772c0c14",
+   "id": "6819eff2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:23.878117Z",
-     "iopub.status.busy": "2025-01-22T10:55:23.877667Z",
-     "iopub.status.idle": "2025-01-22T10:55:23.881378Z",
-     "shell.execute_reply": "2025-01-22T10:55:23.880841Z"
+     "iopub.execute_input": "2025-01-22T11:07:59.327626Z",
+     "iopub.status.busy": "2025-01-22T11:07:59.327134Z",
+     "iopub.status.idle": "2025-01-22T11:07:59.330930Z",
+     "shell.execute_reply": "2025-01-22T11:07:59.330365Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb2d1fc9",
+   "id": "e291d75a",
    "metadata": {},
    "source": [
     "The induced dipole moment at timestep 10 is given by"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c28fdd8f",
+   "id": "c05e008e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:23.883062Z",
-     "iopub.status.busy": "2025-01-22T10:55:23.882891Z",
-     "iopub.status.idle": "2025-01-22T10:55:23.907331Z",
-     "shell.execute_reply": "2025-01-22T10:55:23.906775Z"
+     "iopub.execute_input": "2025-01-22T11:07:59.332807Z",
+     "iopub.status.busy": "2025-01-22T11:07:59.332447Z",
+     "iopub.status.idle": "2025-01-22T11:07:59.358277Z",
+     "shell.execute_reply": "2025-01-22T11:07:59.357761Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5d083d",
+   "id": "337e0689",
    "metadata": {},
    "source": [
     "Induced current at timestep 10"
@@ -217,13 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa7fbeb1",
+   "id": "34227408",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:23.909501Z",
-     "iopub.status.busy": "2025-01-22T10:55:23.909290Z",
-     "iopub.status.idle": "2025-01-22T10:55:23.913517Z",
-     "shell.execute_reply": "2025-01-22T10:55:23.912952Z"
+     "iopub.execute_input": "2025-01-22T11:07:59.360314Z",
+     "iopub.status.busy": "2025-01-22T11:07:59.359894Z",
+     "iopub.status.idle": "2025-01-22T11:07:59.364337Z",
+     "shell.execute_reply": "2025-01-22T11:07:59.363605Z"
     },
     "lines_to_next_cell": 2
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d55b1e",
+   "id": "43cab35e",
    "metadata": {},
    "source": [
     "We can access the Fourier transform as"
@@ -252,13 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ed2d576",
+   "id": "035f1763",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:23.915340Z",
-     "iopub.status.busy": "2025-01-22T10:55:23.915163Z",
-     "iopub.status.idle": "2025-01-22T10:55:24.199905Z",
-     "shell.execute_reply": "2025-01-22T10:55:24.199391Z"
+     "iopub.execute_input": "2025-01-22T11:07:59.366149Z",
+     "iopub.status.busy": "2025-01-22T11:07:59.365967Z",
+     "iopub.status.idle": "2025-01-22T11:07:59.663191Z",
+     "shell.execute_reply": "2025-01-22T11:07:59.662536Z"
     }
    },
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d9ad895",
+   "id": "523dc213",
    "metadata": {},
    "source": [
     "From the classical continuity equation for the charge and current density $\\rho(\\vec{r},t), \\vec{j}(\\vec{r},t)$ and dipole moment density $\\vec{p}(\\vec{r},t)$, we have"
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae09e50e",
+   "id": "8ab31801",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(\\vec{r}, t) = -\\nabla \\vec{j}(\\vec{r}, t) = \\nabla \\dot{\\vec{p}}(\\vec{r}, t) \\implies \\dot{\\vec{p}}(\\vec{r},t) = \\vec{j}(\\vec{r},t)$$"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e992d7e",
+   "id": "6af18d03",
    "metadata": {},
    "source": [
     "After Fourier transformation, we obtain"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ddb2591",
+   "id": "ca927abb",
    "metadata": {},
    "source": [
     "$$-i\\omega \\vec{p}(\\vec{r}, \\omega) = \\vec{j}(\\vec{r}, \\omega)$$"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c048bec",
+   "id": "5e550d77",
    "metadata": {},
    "source": [
     "Its integrated form is given by"
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c06fad",
+   "id": "8eeeccca",
    "metadata": {},
    "source": [
     "$$\\int d\\vec{r} \\dot{\\vec{p}}(\\vec{r},t) = \\dot{\\vec{p}}(t) = \\int d\\vec{r} \\vec{j}(\\vec{r},t) =  \\vec{j}(t)$$ "
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0130c09",
+   "id": "8707465c",
    "metadata": {},
    "source": [
     "$\\vec{j}(t)$ and $\\vec{p}(t)$ are the total current and dipole moment respectively. As classical quantities are given by ensemble averages of quantum operators, we can\n",
@@ -328,13 +328,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "50d41dbe",
+   "id": "3cb7d2bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:24.202270Z",
-     "iopub.status.busy": "2025-01-22T10:55:24.201895Z",
-     "iopub.status.idle": "2025-01-22T10:55:24.582142Z",
-     "shell.execute_reply": "2025-01-22T10:55:24.581559Z"
+     "iopub.execute_input": "2025-01-22T11:07:59.665663Z",
+     "iopub.status.busy": "2025-01-22T11:07:59.665458Z",
+     "iopub.status.idle": "2025-01-22T11:08:00.096050Z",
+     "shell.execute_reply": "2025-01-22T11:08:00.095413Z"
     },
     "lines_to_next_cell": 2
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf38e24",
+   "id": "60af3ca0",
    "metadata": {},
    "source": [
     "The field is also accessible"
@@ -373,13 +373,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "606abf14",
+   "id": "8d375728",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:24.584080Z",
-     "iopub.status.busy": "2025-01-22T10:55:24.583705Z",
-     "iopub.status.idle": "2025-01-22T10:55:24.587315Z",
-     "shell.execute_reply": "2025-01-22T10:55:24.586777Z"
+     "iopub.execute_input": "2025-01-22T11:08:00.097991Z",
+     "iopub.status.busy": "2025-01-22T11:08:00.097679Z",
+     "iopub.status.idle": "2025-01-22T11:08:00.101345Z",
+     "shell.execute_reply": "2025-01-22T11:08:00.100684Z"
     }
    },
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edb5c20e",
+   "id": "f580f68c",
    "metadata": {},
    "source": [
     "## Density matrices"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e941b5",
+   "id": "7b917fee",
    "metadata": {},
    "source": [
     "If we want to only get density matrices, we can  omit the operator list. The result object then contains a one-element list."
@@ -414,13 +414,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bd6c60cd",
+   "id": "c8695bec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:24.589143Z",
-     "iopub.status.busy": "2025-01-22T10:55:24.588725Z",
-     "iopub.status.idle": "2025-01-22T10:55:27.245876Z",
-     "shell.execute_reply": "2025-01-22T10:55:27.245336Z"
+     "iopub.execute_input": "2025-01-22T11:08:00.103080Z",
+     "iopub.status.busy": "2025-01-22T11:08:00.102898Z",
+     "iopub.status.idle": "2025-01-22T11:08:02.757428Z",
+     "shell.execute_reply": "2025-01-22T11:08:02.756891Z"
     }
    },
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef5ed3ee",
+   "id": "886ab88a",
    "metadata": {},
    "source": [
     "We can convert them to energy basis"
@@ -470,13 +470,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "502e1fae",
+   "id": "b80d9925",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:27.247688Z",
-     "iopub.status.busy": "2025-01-22T10:55:27.247502Z",
-     "iopub.status.idle": "2025-01-22T10:55:29.158775Z",
-     "shell.execute_reply": "2025-01-22T10:55:29.158162Z"
+     "iopub.execute_input": "2025-01-22T11:08:02.759468Z",
+     "iopub.status.busy": "2025-01-22T11:08:02.759019Z",
+     "iopub.status.idle": "2025-01-22T11:08:04.705126Z",
+     "shell.execute_reply": "2025-01-22T11:08:04.704640Z"
     }
    },
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9211ac4d",
+   "id": "76fa7eb5",
    "metadata": {},
    "source": [
     "## Occupations"
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b438be",
+   "id": "c45f3010",
    "metadata": {},
    "source": [
     "To reduce memory consumption, we can extract only the site occupations to avoid storing the entire stack of density matices in memory. "
@@ -512,13 +512,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ee205420",
+   "id": "b3c26984",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:29.160717Z",
-     "iopub.status.busy": "2025-01-22T10:55:29.160529Z",
-     "iopub.status.idle": "2025-01-22T10:55:31.828132Z",
-     "shell.execute_reply": "2025-01-22T10:55:31.827608Z"
+     "iopub.execute_input": "2025-01-22T11:08:04.707023Z",
+     "iopub.status.busy": "2025-01-22T11:08:04.706690Z",
+     "iopub.status.idle": "2025-01-22T11:08:07.427073Z",
+     "shell.execute_reply": "2025-01-22T11:08:07.426455Z"
     }
    },
    "outputs": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "264d72b7",
+   "id": "c6f0b536",
    "metadata": {},
    "source": [
     "Further reduction of the memory consumption can be controlled by the grid argument, which describes the density of the time domain sampling grid, explained in the API section on the `master_equation` method."
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db3ba09c",
+   "id": "dcbb448c",
    "metadata": {},
    "source": [
     "## Initially excited states"
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3df678a2",
+   "id": "dcd90064",
    "metadata": {},
    "source": [
     "GRANAD allows to set initially excited states by specifying the single-particle transition in the density matrix as follows"
@@ -584,13 +584,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d695187f",
+   "id": "8de65fe4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:31.830067Z",
-     "iopub.status.busy": "2025-01-22T10:55:31.829882Z",
-     "iopub.status.idle": "2025-01-22T10:55:33.073675Z",
-     "shell.execute_reply": "2025-01-22T10:55:33.073125Z"
+     "iopub.execute_input": "2025-01-22T11:08:07.429103Z",
+     "iopub.status.busy": "2025-01-22T11:08:07.428751Z",
+     "iopub.status.idle": "2025-01-22T11:08:08.689968Z",
+     "shell.execute_reply": "2025-01-22T11:08:08.689432Z"
     }
    },
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470079a7",
+   "id": "576e07b2",
    "metadata": {},
    "source": [
     "In case of degeneracies, GRANAD distributes electrons equally among all degenerate energy levels, as demonstrated in the figure above."
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa6eae1",
+   "id": "9cbe327e",
    "metadata": {},
    "source": [
     "## Energy occupations"
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86c5bc6",
+   "id": "ca6f7cae",
    "metadata": {},
    "source": [
     "Similarly to site occupations, only energy occupations can also be obtained from the time-domain simulations."
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3990ba5c",
+   "id": "68e4bc1f",
    "metadata": {},
    "source": [
     "*Warning*: this introduces additional cubic complexity "
@@ -645,13 +645,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ff719334",
+   "id": "90f76b67",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:33.075825Z",
-     "iopub.status.busy": "2025-01-22T10:55:33.075485Z",
-     "iopub.status.idle": "2025-01-22T10:55:39.341774Z",
-     "shell.execute_reply": "2025-01-22T10:55:39.341160Z"
+     "iopub.execute_input": "2025-01-22T11:08:08.691771Z",
+     "iopub.status.busy": "2025-01-22T11:08:08.691590Z",
+     "iopub.status.idle": "2025-01-22T11:08:15.019238Z",
+     "shell.execute_reply": "2025-01-22T11:08:15.018731Z"
     }
    },
    "outputs": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f964616",
+   "id": "9058ec5b",
    "metadata": {},
    "source": [
     "## Combinations"
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ddea737",
+   "id": "11fa7927",
    "metadata": {},
    "source": [
     "We can also extract multiple quantities at the same time"
@@ -716,13 +716,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1c4dede6",
+   "id": "ea524414",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:39.343764Z",
-     "iopub.status.busy": "2025-01-22T10:55:39.343417Z",
-     "iopub.status.idle": "2025-01-22T10:55:43.319193Z",
-     "shell.execute_reply": "2025-01-22T10:55:43.318682Z"
+     "iopub.execute_input": "2025-01-22T11:08:15.021231Z",
+     "iopub.status.busy": "2025-01-22T11:08:15.020873Z",
+     "iopub.status.idle": "2025-01-22T11:08:19.042518Z",
+     "shell.execute_reply": "2025-01-22T11:08:19.041917Z"
     }
    },
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35db8f5",
+   "id": "d646713e",
    "metadata": {},
    "source": [
     "The output will now contain three arrays: induced dipole moments, site occupations and full density matrices"
@@ -770,13 +770,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f2198635",
+   "id": "1651b37b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:43.321132Z",
-     "iopub.status.busy": "2025-01-22T10:55:43.320947Z",
-     "iopub.status.idle": "2025-01-22T10:55:43.324982Z",
-     "shell.execute_reply": "2025-01-22T10:55:43.324371Z"
+     "iopub.execute_input": "2025-01-22T11:08:19.044659Z",
+     "iopub.status.busy": "2025-01-22T11:08:19.044223Z",
+     "iopub.status.idle": "2025-01-22T11:08:19.048748Z",
+     "shell.execute_reply": "2025-01-22T11:08:19.048201Z"
     }
    },
    "outputs": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6644d66",
+   "id": "b733c358",
    "metadata": {},
    "source": [
     "## EPI"
@@ -808,22 +808,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9e0b79a",
+   "id": "fb9ab885",
    "metadata": {},
    "source": [
-    "The energy-based plasmonicity index is a quantity to characterize the steady-state plasmonicity. We use plane wave illumination to drive the system into a steady state and then compute the EPI"
+    "The energy-based plasmonicity index introduced by [Müller et al.](https://pubs.acs.org/doi/10.1021/acs.jpcc.0c07964) is a quantity to characterize the steady-state plasmonicity. We use plane wave illumination to drive the system into a steady state and then compute the EPI."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0e0119d5",
+   "id": "91db7892",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:55:43.326669Z",
-     "iopub.status.busy": "2025-01-22T10:55:43.326499Z",
-     "iopub.status.idle": "2025-01-22T10:55:47.312833Z",
-     "shell.execute_reply": "2025-01-22T10:55:47.312292Z"
+     "iopub.execute_input": "2025-01-22T11:08:19.050781Z",
+     "iopub.status.busy": "2025-01-22T11:08:19.050319Z",
+     "iopub.status.idle": "2025-01-22T11:08:23.096166Z",
+     "shell.execute_reply": "2025-01-22T11:08:23.095584Z"
     }
    },
    "outputs": [
