--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c7d47e53",
+   "id": "534663ef",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83048070",
+   "id": "37150b45",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8e5954d",
+   "id": "3e9768b3",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39cb02a5",
+   "id": "99fb276b",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7537f6f",
+   "id": "c1ff0527",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c53c87",
+   "id": "7e282b9f",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "450fcdbf",
+   "id": "4822f590",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:27.395929Z",
-     "iopub.status.busy": "2025-01-22T10:54:27.395757Z",
-     "iopub.status.idle": "2025-01-22T10:54:31.592226Z",
-     "shell.execute_reply": "2025-01-22T10:54:31.591696Z"
+     "iopub.execute_input": "2025-01-22T11:07:01.220712Z",
+     "iopub.status.busy": "2025-01-22T11:07:01.220524Z",
+     "iopub.status.idle": "2025-01-22T11:07:05.597467Z",
+     "shell.execute_reply": "2025-01-22T11:07:05.596922Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee8882a",
+   "id": "83edb086",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6327fe28",
+   "id": "576efbf4",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24a4db1f",
+   "id": "a9d77403",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c85515",
+   "id": "6877d197",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82337ac6",
+   "id": "bedd6f43",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dde2309",
+   "id": "4c662e7e",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a205363",
+   "id": "848a4837",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94bf7a6",
+   "id": "8999e3c5",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "912bc4be",
+   "id": "6e3185a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:31.594677Z",
-     "iopub.status.busy": "2025-01-22T10:54:31.594135Z",
-     "iopub.status.idle": "2025-01-22T10:54:33.557878Z",
-     "shell.execute_reply": "2025-01-22T10:54:33.557338Z"
+     "iopub.execute_input": "2025-01-22T11:07:05.599940Z",
+     "iopub.status.busy": "2025-01-22T11:07:05.599478Z",
+     "iopub.status.idle": "2025-01-22T11:07:07.560745Z",
+     "shell.execute_reply": "2025-01-22T11:07:07.560086Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bd9c691",
+   "id": "5e6f9032",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "96d81d2a",
+   "id": "cb3a1d59",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:33.559688Z",
-     "iopub.status.busy": "2025-01-22T10:54:33.559501Z",
-     "iopub.status.idle": "2025-01-22T10:54:33.563016Z",
-     "shell.execute_reply": "2025-01-22T10:54:33.562453Z"
+     "iopub.execute_input": "2025-01-22T11:07:07.562720Z",
+     "iopub.status.busy": "2025-01-22T11:07:07.562519Z",
+     "iopub.status.idle": "2025-01-22T11:07:07.566694Z",
+     "shell.execute_reply": "2025-01-22T11:07:07.566104Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e96ed46",
+   "id": "5217b6c2",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b918eafb",
+   "id": "b7f9e7d9",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d05d21e",
+   "id": "dfca8c4a",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1fd16ab",
+   "id": "0efb27f2",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fc5759d8",
+   "id": "62e65c60",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:33.564977Z",
-     "iopub.status.busy": "2025-01-22T10:54:33.564626Z",
-     "iopub.status.idle": "2025-01-22T10:54:33.609043Z",
-     "shell.execute_reply": "2025-01-22T10:54:33.608474Z"
+     "iopub.execute_input": "2025-01-22T11:07:07.568686Z",
+     "iopub.status.busy": "2025-01-22T11:07:07.568320Z",
+     "iopub.status.idle": "2025-01-22T11:07:07.619861Z",
+     "shell.execute_reply": "2025-01-22T11:07:07.619212Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12705aaf",
+   "id": "1322c02b",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f9cc5a64",
+   "id": "c3d9f95a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:33.610796Z",
-     "iopub.status.busy": "2025-01-22T10:54:33.610604Z",
-     "iopub.status.idle": "2025-01-22T10:54:33.677155Z",
-     "shell.execute_reply": "2025-01-22T10:54:33.676637Z"
+     "iopub.execute_input": "2025-01-22T11:07:07.622067Z",
+     "iopub.status.busy": "2025-01-22T11:07:07.621691Z",
+     "iopub.status.idle": "2025-01-22T11:07:07.695874Z",
+     "shell.execute_reply": "2025-01-22T11:07:07.695275Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c4de57",
+   "id": "a4eb61c6",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "308b61a9",
+   "id": "2fdd2f7b",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d3c247a5",
+   "id": "c8a373f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:33.679090Z",
-     "iopub.status.busy": "2025-01-22T10:54:33.678724Z",
-     "iopub.status.idle": "2025-01-22T10:54:33.707623Z",
-     "shell.execute_reply": "2025-01-22T10:54:33.707113Z"
+     "iopub.execute_input": "2025-01-22T11:07:07.698051Z",
+     "iopub.status.busy": "2025-01-22T11:07:07.697667Z",
+     "iopub.status.idle": "2025-01-22T11:07:07.727968Z",
+     "shell.execute_reply": "2025-01-22T11:07:07.727375Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417e2a0a",
+   "id": "02325061",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6dfeb9",
+   "id": "7cefb884",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0248ebe7",
+   "id": "8d59a74a",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28945db0",
+   "id": "a018e140",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "457fdef8",
+   "id": "41deefb2",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7ef53592",
+   "id": "cc83697a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:33.709648Z",
-     "iopub.status.busy": "2025-01-22T10:54:33.709261Z",
-     "iopub.status.idle": "2025-01-22T10:54:33.713249Z",
-     "shell.execute_reply": "2025-01-22T10:54:33.712705Z"
+     "iopub.execute_input": "2025-01-22T11:07:07.730213Z",
+     "iopub.status.busy": "2025-01-22T11:07:07.729851Z",
+     "iopub.status.idle": "2025-01-22T11:07:07.733961Z",
+     "shell.execute_reply": "2025-01-22T11:07:07.733325Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87544c27",
+   "id": "5c5fa63a",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d6917b90",
+   "id": "d2428021",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:33.715160Z",
-     "iopub.status.busy": "2025-01-22T10:54:33.714810Z",
-     "iopub.status.idle": "2025-01-22T10:54:33.717842Z",
-     "shell.execute_reply": "2025-01-22T10:54:33.717197Z"
+     "iopub.execute_input": "2025-01-22T11:07:07.735970Z",
+     "iopub.status.busy": "2025-01-22T11:07:07.735536Z",
+     "iopub.status.idle": "2025-01-22T11:07:07.738840Z",
+     "shell.execute_reply": "2025-01-22T11:07:07.738158Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06033d4e",
+   "id": "950f1333",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "da5bbe2a",
+   "id": "5ec18b21",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:33.719502Z",
-     "iopub.status.busy": "2025-01-22T10:54:33.719301Z",
-     "iopub.status.idle": "2025-01-22T10:54:36.305092Z",
-     "shell.execute_reply": "2025-01-22T10:54:36.304512Z"
+     "iopub.execute_input": "2025-01-22T11:07:07.740567Z",
+     "iopub.status.busy": "2025-01-22T11:07:07.740387Z",
+     "iopub.status.idle": "2025-01-22T11:07:10.348111Z",
+     "shell.execute_reply": "2025-01-22T11:07:10.347583Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36dc97e0",
+   "id": "990f9c6c",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c17d7fc4",
+   "id": "61da0619",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b9d99e",
+   "id": "fe3e66dc",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f28e21d",
+   "id": "8e56d082",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "033bd34a",
+   "id": "2f5b802a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:36.307007Z",
-     "iopub.status.busy": "2025-01-22T10:54:36.306810Z",
-     "iopub.status.idle": "2025-01-22T10:54:36.310660Z",
-     "shell.execute_reply": "2025-01-22T10:54:36.310004Z"
+     "iopub.execute_input": "2025-01-22T11:07:10.350311Z",
+     "iopub.status.busy": "2025-01-22T11:07:10.349987Z",
+     "iopub.status.idle": "2025-01-22T11:07:10.353834Z",
+     "shell.execute_reply": "2025-01-22T11:07:10.353177Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f93a4551a80>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f02c42619e0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2cb976",
+   "id": "fca8b171",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4281d9a8",
+   "id": "fd492c5f",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94ae906",
+   "id": "306475fd",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d2108e",
+   "id": "13dca90f",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0e86384c",
+   "id": "a26ccf6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:36.312522Z",
-     "iopub.status.busy": "2025-01-22T10:54:36.312316Z",
-     "iopub.status.idle": "2025-01-22T10:54:36.315460Z",
-     "shell.execute_reply": "2025-01-22T10:54:36.314886Z"
+     "iopub.execute_input": "2025-01-22T11:07:10.355680Z",
+     "iopub.status.busy": "2025-01-22T11:07:10.355495Z",
+     "iopub.status.idle": "2025-01-22T11:07:10.358710Z",
+     "shell.execute_reply": "2025-01-22T11:07:10.358075Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "77345c59",
+   "id": "6e44d756",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:54:36.317086Z",
-     "iopub.status.busy": "2025-01-22T10:54:36.316911Z",
-     "iopub.status.idle": "2025-01-22T10:54:37.367610Z",
-     "shell.execute_reply": "2025-01-22T10:54:37.367016Z"
+     "iopub.execute_input": "2025-01-22T11:07:10.360493Z",
+     "iopub.status.busy": "2025-01-22T11:07:10.360120Z",
+     "iopub.status.idle": "2025-01-22T11:07:11.436732Z",
+     "shell.execute_reply": "2025-01-22T11:07:11.436186Z"
     }
    },
    "outputs": [
